--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <!-- Search Box -->
         <div class="search-container">
           <div class="search-box">
-            <button class="home-btn">
+            <a href="./" class="home-btn">
               <img
                 src="./assets/icons/home.svg"
                 alt=""
                 class="home-btn__icon"
               />
-            </button>
+            </a>
             <div class="search-input-wrapper">
               <button class="search-btn">
                 <img
@@ -65,15 +65,15 @@
             <span class="download-app__text">Cài đặt ứng dụng</span>
           </div>
 
-          <!-- Is Logon = false -->
-          <div class="auth-buttons" style="display: none">
+          <!-- Is Login = false -->
+          <div class="auth-buttons" style="">
             <button class="auth-btn signup-btn">Sign up</button>
             <button class="auth-btn login-btn">Log in</button>
           </div>
 
           <!-- Is Login -->
           <!-- Notification -->
-          <div class="notify">
+          <div class="notify" style="display: none">
             <button class="btn-svg">
               <img
                 src="./assets/icons/bell.svg"
@@ -84,7 +84,7 @@
           </div>
 
           <!-- User -->
-          <div class="user-menu">
+          <div class="user-menu" style="display: none">
             <button class="user-avatar" id="userAvatar">
               <img src="./assets/images/avatar.jpg" alt="User Avatar" />
             </button>
@@ -132,83 +132,75 @@
               </button>
             </div>
 
-            <div class="tabza__panels">
-              <!-- Playlists -->
-              <div data-panel="1" class="tabza__panel active">
-                <div class="library-content">
-                  <div class="library-item active">
-                    <div class="item-icon liked-songs">
-                      <i class="fas fa-heart"></i>
-                    </div>
-                    <div class="item-info">
-                      <div class="item-title">Liked Songs</div>
-                      <div class="item-subtitle">
-                        <i class="fas fa-thumbtack"></i>
-                        Playlist • 3 songs
-                      </div>
-                    </div>
+            <div class="wrap__sidebar" id="sidebarPlaylist">
+              <!-- TODO: Sidebar laster -->
+              <div class="library-content">
+                <div class="library-item active">
+                  <div class="item-icon liked-songs">
+                    <i class="fas fa-heart"></i>
                   </div>
-
-                  <div class="library-item">
-                    <img
-                      src="placeholder.svg?height=48&width=48"
-                      alt="Đen"
-                      class="item-image"
-                    />
-                    <div class="item-info">
-                      <div class="item-title">Đen</div>
-                      <div class="item-subtitle">Artist</div>
-                    </div>
-                  </div>
-
-                  <div class="library-item">
-                    <img
-                      src="placeholder.svg?height=48&width=48"
-                      alt="Trúc Nhân"
-                      class="item-image"
-                    />
-                    <div class="item-info">
-                      <div class="item-title">Trúc Nhân</div>
-                      <div class="item-subtitle">Artist</div>
-                    </div>
-                  </div>
-
-                  <div class="library-item">
-                    <img
-                      src="placeholder.svg?height=48&width=48"
-                      alt="24.03"
-                      class="item-image"
-                    />
-                    <div class="item-info">
-                      <div class="item-title">24.03</div>
-                      <div class="item-subtitle">Playlist • Han</div>
-                    </div>
-                  </div>
-
-                  <div class="library-item">
-                    <img
-                      src="placeholder.svg?height=48&width=48"
-                      alt="Thùy Chi"
-                      class="item-image"
-                    />
-                    <div class="item-info">
-                      <div class="item-title">Thùy Chi</div>
-                      <div class="item-subtitle">Artist</div>
+                  <div class="item-info">
+                    <div class="item-title">Liked Songs</div>
+                    <div class="item-subtitle">
+                      <i class="fas fa-thumbtack"></i>
+                      Playlist • 3 songs
                     </div>
                   </div>
                 </div>
-              </div>
 
-              <!-- Artists -->
-              <div data-panel="2" class="tabza__panel">
-                <div class="library-content" id="artists">
-                  <!-- Đợi JS Render ra -->
+                <div class="library-item">
+                  <img
+                    src="placeholder.svg?height=48&width=48"
+                    alt="Đen"
+                    class="item-image"
+                  />
+                  <div class="item-info">
+                    <div class="item-title">Đen</div>
+                    <div class="item-subtitle">Artist</div>
+                  </div>
+                </div>
+
+                <div class="library-item">
+                  <img
+                    src="placeholder.svg?height=48&width=48"
+                    alt="Trúc Nhân"
+                    class="item-image"
+                  />
+                  <div class="item-info">
+                    <div class="item-title">Trúc Nhân</div>
+                    <div class="item-subtitle">Artist</div>
+                  </div>
+                </div>
+
+                <div class="library-item">
+                  <img
+                    src="placeholder.svg?height=48&width=48"
+                    alt="24.03"
+                    class="item-image"
+                  />
+                  <div class="item-info">
+                    <div class="item-title">24.03</div>
+                    <div class="item-subtitle">Playlist • Han</div>
+                  </div>
+                </div>
+
+                <div class="library-item">
+                  <img
+                    src="placeholder.svg?height=48&width=48"
+                    alt="Thùy Chi"
+                    class="item-image"
+                  />
+                  <div class="item-info">
+                    <div class="item-title">Thùy Chi</div>
+                    <div class="item-subtitle">Artist</div>
+                  </div>
                 </div>
               </div>
             </div>
           </nav>
         </aside>
 
+        <!-- Wrapper Content -->
         <div class="content-wrapper" id="contentWrapper">
           <!-- Đợi JS Render -->
         </div>
@@ -216,66 +208,7 @@
 
       <!-- Bottom Player -->
       <footer class="player">
-        <div class="player-left">
-          <img
-            src="placeholder.svg?height=56&width=56"
-            alt="Current track"
-            class="player-image"
-          />
-          <div class="player-info">
-            <div class="player-title">Yêu Một Người Sao Buồn Đến Thế</div>
-            <div class="player-artist">Noo Phước Thịnh</div>
-          </div>
-          <button class="add-btn">
-            <i class="fa-solid fa-plus"></i>
-          </button>
-        </div>
-
-        <div class="player-center">
-          <div class="player-controls">
-            <button class="control-btn active">
-              <i class="fas fa-random"></i>
-            </button>
-            <button class="control-btn">
-              <i class="fas fa-step-backward"></i>
-            </button>
-            <button class="control-btn play-btn">
-              <i class="fas fa-pause"></i>
-            </button>
-            <button class="control-btn">
-              <i class="fas fa-step-forward"></i>
-            </button>
-            <button class="control-btn">
-              <i class="fas fa-redo"></i>
-            </button>
-          </div>
-          <div class="progress-container">
-            <span class="time">0:52</span>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 20%"></div>
-              <div class="progress-handle"></div>
-            </div>
-            <span class="time">4:59</span>
-          </div>
-        </div>
-
-        <div class="player-right">
-          <button class="control-btn">
-            <i class="fas fa-microphone"></i>
-          </button>
-          <div class="volume-container">
-            <button class="control-btn">
-              <i class="fas fa-volume-down"></i>
-            </button>
-            <div class="volume-bar">
-              <div class="volume-fill" style="width: 70%"></div>
-              <div class="volume-handle"></div>
-            </div>
-          </div>
-          <button class="control-btn">
-            <i class="fas fa-expand"></i>
-          </button>
-        </div>
+        <!-- Đợi JS Render -->
       </footer>
     </div>
 
@@ -357,7 +290,6 @@
                   id="loginPassword"
                 />
                 <div class="error-message">
-                  <i class="fas fa-info-circle"></i>
                   <span>Please enter your password</span>
                 </div>
               </div>
@@ -374,6 +306,6 @@
       </div>
     </div>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
